# VSLAM-playground

./: .gitignore  .gitmodules  README.md  setup.py
VslamPlaygroundROS/: CMakeLists.txt  package.xml  setup.cfg  setup.py
VslamPlaygroundROS/VslamPlaygroundROS/: dataPublisher.py  data_publisher.cpp  data_publisher_py.py
VslamPlaygroundROS/include/: utils.hpp
VslamPlaygroundROS/rviz/: data_vis.rviz
drafts/: feature_lidar_icp.py  hitnet_utils.py  ros2_node.py  stereo-hitnet.py
ros2_ws/: README.md
ros2_ws/src/vslam-playground-ros/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/vslam-playground-ros/config/: data_visualiser.rviz
ros2_ws/src/vslam-playground-ros/include/: utils.hpp
ros2_ws/src/vslam-playground-ros/launch/: demo.launch.py  init.launch.py
ros2_ws/src/vslam-playground-ros/src/: data_publisher.cpp  data_publisher.py  data_publisher_py.py  visual_odometry.py
ros2_ws/src/vslamPlaygroundRos/: package.xml
ros2_ws/src/vslamPlaygroundRos/config/: data_visualiser.rviz
ros2_ws/src/vslamPlaygroundRos/include/: utils.hpp
ros2_ws/src/vslamPlaygroundRos/launch/: init.launch.py
ros2_ws/src/vslamPlaygroundRos/src/: data_publisher.cpp
vslam/: definitions.py  lidar_depth.py  lidar_depth_lightglue.py  monocular.py  stereo.py  utils.py
vslam/visualisation/: animate_trajectory.py  visualise_features.py  visualise_lidar.py  visualise_trajectory.py  visualise_trajectory_pointcloud.py  visualise_trajectory_pointcloud_animated.py
